feat: Added logic for handling unavailable images
Refs: #307